<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Calendar</string>
	  <string-array name="view_modes">
        <item>Day View</item> 
        <item>Month View</item>
    </string-array>    
    
    <string name="event_add_name">Name:</string>
	<string name="event_add_place">Place:</string>
	<string name="event_add_date">Date:</string>
	<string name="event_add_start_time">From:</string>
	<string name="event_add_end_time">To:</string>
	<string name="event_add_note">Note:</string>
	<string name="event_add_mute_device">Mute device during event:</string>
	<string name="event_add_period">Repeat:</string>
	<string name="event_add_interval">Every</string>
	<string name="event_add_interval_text_daily">day(s).</string>
	<string name="event_add_interval_text_weekly">week(s).</string>
	<string name="event_add_interval_text_monthly">month(s).</string>
	<string name="event_add_interval_text_yearly">year(s).</string>
	<string name="event_add_date_picker_description">Choose date</string>
	<string name="event_add_start_time_picker_description">Choose start time</string>
	<string name="event_add_end_time_picker_description">Choose end time</string>
	<string name="event_add_interval_init_value">1</string>
	<string name="event_add_alarm">Add reminder</string>
	<string name="event_delete_alarm">Delete reminder</string>
	<string-array name="event_period_week_day_names_array">
	    <item>Su</item>
	    <item>Mo</item>
	    <item>Tu</item>
	    <item>We</item>
	    <item>Th</item>
	    <item>Fr</item>
	    <item>Sa</item>
	   </string-array>
	<string-array name="event_alarm_type_array">
	    <item>Alarm</item>
	</string-array>
	<string-array name="event_period_type_array">
        <item>None</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>
    <string-array name="event_period_end_date_array">
	    <item>Forever</item>
		<item>Until a date</item>
	</string-array>
	
    <string name = "event_checker_invalid_date">Event date is invalid.</string>
	<string name = "event_checker_invalid_start_time">Event start time is invalid.</string>
	<string name = "event_checker_invalid_end_time">Event end time is invalid.</string>
	<string name = "event_checker_interval_less_than_zero">Event period interval should be greater than zero.</string>
	<string name = "event_checker_invalid_interval">Event period interval invalid.</string>
	<string name = "event_checker_invalid_period_end_date">Event period end date is invalid.</string>
	<string name = "event_checker_empty_period_end_date">Event period end date is empty.</string>
	<string name = "event_checker_empty_name">Event name is empty.</string>
	<string name = "event_checker_invalid_alarm_time">Reminder time is invalid.</string>
	<string name = "event_checker_start_time_before_end_time">End time is not after start time.</string>
	<string name = "event_checker_end_date_before_start_date">End date is not after start date.</string>
	<string name = "event_pager_no_events">No events today.</string>
	
	<string name = "menu_save_event">Save</string>
	<string name = "menu_delete_event">Delete</string>
	<string name = "menu_add_event">Add event</string>
	<string name = "menu_view_today">Today</string>
	<string name = "menu_go_to_date">Go to date</string>
	<string name=  "menu_settings">Settings</string>
    
	<string name = "actionbar_date_today">Today</string>
	<string name = "actionbar_add_event">Add event</string>
	<string name = "actionbar_edit_event">Edit event</string>
	<string name = "actionbar_copy_event">Copy event</string>
	
	<string name = "dialog_button_save">Save</string>
	<string name = "dialog_button_delete">Delete</string>
	<string name = "dialog_button_cancel">Cancel</string>
	<string name = "dialog_title_delete_event">Delete event?</string>
	<string name = "dialog_title_save_event">Save event?</string>
	<string name = "dialog_option_change_this_event">Change only this event</string>
	<string name = "dialog_option_change_all_events">Change all future events</string>
	<string name = "dialog_option_delete_this_event">Delete only this event</string>
	<string name = "dialog_option_delete_all_events">Delete all future events</string>
	
	<!-- String of setting activity -->
	<string name="pref_title">Settings</string>
 	<string name="pref_alarm_tone_title">Alarm ringtone</string>
 	<string name="pref_alarm_tone_summary">Choose ringtone to play, when alarm is fired.</string>
 	
	<string name = "alarm_sound_preference_dialog_button_positive">Select</string>
	<string name = "alarm_sound_preference_dialog_button_negative">Cancel</string>
	
	<string name = "alarm_alert_button_dismiss">Dismiss</string>
	<string name = "alarm_alert_button_snooze">Snooze</string>
	
	<string name = "month_view_monday">Mo</string>
	<string name = "month_view_tuesday">Tu</string>
	<string name = "month_view_wednesday">We</string>
	<string name = "month_view_thursday">Th</string>
	<string name = "month_view_friday">Fr</string>
	<string name = "month_view_saturday">Sa</string>
	<string name = "month_view_sunday">Su</string>
	
	
	
	
	
	
</resources>
